--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch ",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -45,11 +45,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-fastify": "^10.1.3",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.1.0",
+    "@types/amqplib": "^0.10.6",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
+    "async-mutex": "^0.5.0",
     "bull": "^4.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
