--- a/package.json
+++ b/package.json
@@ -100,12 +100,15 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "rootDir": "src",
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
