--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,10 @@ EMAIL_HOST=
 SMTP_PORT=
 EMAIL_ADDRESS=
 EMAIL_PASSWORD=
+
+RABBIT_MQ_HOST=localhost
+RABBIT_MQ_PORT=5672
+RABBIT_MQ_USER=guest
+RABBIT_MQ_PASSWORD=guest
+
+RABBIT_MQ_URL=amqp://${RABBIT_MQ_USER}:${RABBIT_MQ_PASSWORD}@${RABBIT_MQ_HOST}:${RABBIT_MQ_PORT}
