--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^6.1.0",
+    "@types/amqplib": "^0.10.6",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
+    "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
+    "prisma-dbml-generator": "^0.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -26,8 +32,10 @@
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
@@ -41,6 +49,10 @@
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
+    "verdaccio": "^5.0.4",
     "webpack-cli": "^5.1.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
