--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,10 +11,13 @@
     "target": "es2015",
     "module": "esnext",
     "lib": ["es2020", "dom"],
+    "strict": false,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@rumsan/nest-rabbitmq": ["libs/rabbitmq/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
