--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nest-queue/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:dev": "nx serve nest-queue --verbose"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
@@ -14,9 +16,11 @@
     "amqplib": "^0.10.5",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "prisma-dbml-generator": "^0.12.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
