--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
     "@types/amqplib": "^0.10.6",
     "amqp-connection-manager": "^4.1.14",
