--- a/libs/rabbitmq/package.json
+++ b/libs/rabbitmq/package.json
@@ -2,7 +2,12 @@
   "name": "@rumsan/rabbitmq",
   "version": "0.0.1",
   "dependencies": {
-    "@swc/helpers": "~0.5.11"
+    "@swc/helpers": "~0.5.11",
+    "amqplib": "^0.10.5",
+    "axios": "^1.6.0",
+    "uuid": "^11.0.3",
+    "@nestjs/common": "^10.0.2",
+    "amqp-connection-manager": "^4.1.14"
   },
   "type": "commonjs",
   "main": "./src/index.js",
